--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
         Copyright 2014 - 2022, GameOn Inc.
       </p>
     </footer>
-    <script src="modal.js"></script>
+    <script src="confirmationpage.js"></script>
+    <script src="variables.js"></script>
+    <script src="fonctions.js"></script>
   </body>
 </html>
